[package]
name = "ky-sync"
description = "Unofficial CLI for KyBook 3 content server"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Petrukhin @ninedraft"]
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ninedraf/ky-sync"
homepage = "https://github.com/ninedraf/ky-sync"
keywords = ["cli", "async", "exec", "media", "books"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
reqwest = { version = "0.11.10", features = ["json"] } # a simple async HTTP client
tokio = { version = "1.18.2", features = ["full"] }
futures = "0.3.21"
anyhow = "1.0.57" # adding context to Result::Err
bytes = "1.1.0" # ligthweight bytes buffers with sugar and whistles
log="0.4.17"
simple_logger= {version = "2.1.0", features = ["colors"], default-features = false}